card section spacing fixed tablet

--- a/sass/_johns.sass
+++ b/sass/_johns.sass
@@ -16,11 +16,14 @@ ul
    font-size: 16px
    line-height: 1.5
 
+.ts-card-container
+   padding-left: 26px
+
 .ts-molc-card
    padding: 0
 
 .ts-molc-card--mod   
-   width: 93%
+   width: 324px
    height: 374px
    padding-bottom: 10px
    margin-bottom: 10px
@@ -105,6 +108,37 @@ ul
 
 
 @media screen and (min-width: $medium)
+   .ts-card-container
+      padding-left: 54px
+      padding-right: 54px
+      
+
+   .ts-molc-card
+      padding: 0px
+      
+
+   .ts-molc-card--mod   
+      width: 218px
+      height: 578px
+      margin-bottom: 10px
+      margin-left: -2px
+      margin-right: -2px
+
+   .ts-cardt1__h4
+      font-size: 25px
+      line-height: 1
+      letter-spacing: -0.5px
+      font-weight: 800
+   .ts-cardt1__p
+      line-height: 1.25
+      margin-bottom: 10px
+
+   .ts-atom-card__img
+      width: 80px
+      height: 80px
+      margin-bottom: -16px
+
+
    .ts-footer-banner__h2   
       padding-top: 40px
       margin-bottom: 20px
